tests/error/modifier_errors/flag_loop.err
Error: Invalid expression in dagger (at $FILE:8:4)
  | 
6 | @guppy(dagger=True)
7 | def test() -> None:
8 |     for _ in range(10):
  |     ^^^^^^^^^^^^^^^^^^^
9 |         pass
  | ^^^^^^^^^^^^ Loop found in a dagger context

Guppy compilation failed due to 1 previous error
